[package]
name = "checksum-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
adler = "1.0.2"
blake2 = { version = "0.10.6" }
blake3 = { version = "1.5.0" }
crc32fast = { version = "1.3.2", features = ["nightly"] }
divan = "0.1.3"
sha1 = "0.10.6"
sha2 = "0.10.8"

[[bench]]
name = "checksums"
harness = false
