[package]
name = "checksum-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
divan = "0.1.11"

adler = "1.0.2"
blake2 = { version = "0.10.6" }
blake3 = { version = "1.5.0", features = ["rayon"]}
crc32fast = { version = "1.3.2", features = ["nightly"] }
md5 = "0.7.0"
sha1 = { version = "0.10.6", features = ["asm"] }
sha2 = { version = "0.10.8", features = ["asm-aarch64"] }
sha3 = { version = "0.10.8", features = ["asm"] }

[[bench]]
name = "checksums"
harness = false
